test/spec_vectors/conversions/fail/module_10.wat
(module (func (result i64) (i64.trunc_f32_u (i32.const 0))))